<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.cordi_000.tdmbds.Connexion$PlaceholderFragment">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_marginTop="47dp"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/bievenue"
        android:id="@+id/formInfo"
        android:layout_marginTop="41dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/messageBievenue"
        android:id="@+id/textView2"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/formInfo"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BoutonConnexion"
        android:id="@+id/registerButton"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="28dp"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BoutonEnregistrer"
        android:id="@+id/boutonEnregistrer"
        android:onClick="versEnregistrement"
        android:layout_below="@+id/registerButton"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignEnd="@+id/registerButton" />
</RelativeLayout>
